syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "StopServerInfo.proto";

message GetPlayerTokenRsp {
	uint32 channel_id = 1122;
	string token = 13;
	bool is_guest = 9;
	string msg = 10;
	string psn_id = 139;
	string server_rand_key = 441;
	string client_ip_str = 693;
	bool HJHKHIHOOGF = 759;
	uint32 CJEPHIBBFLP = 5;
	uint32 tag = 1229;
	repeated uint32 finish_collection_id_list = 216;
	uint32 account_type = 1584;
	uint32 PEONMNFOADG = 563;
	string secret_key = 1;
	bool is_proficient_player = 4;
	StopServerInfo stop_server = 622;
	uint32 cloudClientIp = 1101;
	string country_code = 1269;
	uint64 secret_key_seed = 6;
	string birthday = 1776;
	int32 retcode = 14;
	uint32 sub_channel_id = 15;
	uint32 uid = 11;
	string account_uid = 3;
	bytes security_cmd_buffer = 2;
	bool HHHFEOKPFCD = 1578;
	uint32 blackUidEndTime = 8;
	uint32 platform_type = 12;
	string client_version_random_key = 221;
	uint32 key_id = 1943;
	bytes extra_bin_data = 7;
	string sign = 1458;
}
