syntax = "proto3";

option csharp_namespace = "Common.Protobuf";

import "ServerLogLevel.proto";
import "ServerLogType.proto";

// CmdId: 59
// Name: MGKNBEFLFIP
message ServerLogNotify {
    ServerLogType log_type = 13;
    ServerLogLevel log_level = 10;
    string server_log = 1;
}

